# AppleMetal

./: CMakeLists.txt  main.cpp  shader.metal
src/: AppleMetal.cpp  CMakeLists.txt
src/include/AppleMetal/: AppleMetal.hpp
